# Campfire

./: .gitignore  ATTRIBUTION.md  CMakeLists.txt  CMakeSettings.json  README.md  Readme.md
Assets/Models/backpack/: imgui.ini
Campfire/Sources/: main.cpp
Campfire/Sources/Core/: Application.cpp  Timer.h
Campfire/Sources/Editor/: EditorLayer.cpp  EditorLayer.h
Campfire/Sources/Renderer/: Mesh.cpp  Mesh.h
Campfire/Sources/Scene/: Scene.cpp  Scene.h
Engine/: CMakeLists.txt  EntryPoint.h
Engine/Core/src/Core/: Application.cpp
Scripts/: CMakeLists.txt
Scripts/include/Scripts/: NativeScript.cpp  NativeScript.h  Player.h  Script.h
Scripts/src/: Script.cpp
